; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-tq.c_timeout_queue_insert.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-tq.c_timeout_queue_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeout_queue = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.lwan_connection = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timeout_queue_insert(%struct.timeout_queue* %0, %struct.lwan_connection* %1) #0 {
  %3 = alloca %struct.timeout_queue*, align 8
  %4 = alloca %struct.lwan_connection*, align 8
  %5 = alloca %struct.lwan_connection*, align 8
  store %struct.timeout_queue* %0, %struct.timeout_queue** %3, align 8
  store %struct.lwan_connection* %1, %struct.lwan_connection** %4, align 8
  %6 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %7 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %6, i32 0, i32 0
  store i32 -1, i32* %7, align 4
  %8 = load %struct.timeout_queue*, %struct.timeout_queue** %3, align 8
  %9 = getelementptr inbounds %struct.timeout_queue, %struct.timeout_queue* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %13 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load %struct.timeout_queue*, %struct.timeout_queue** %3, align 8
  %15 = load %struct.timeout_queue*, %struct.timeout_queue** %3, align 8
  %16 = getelementptr inbounds %struct.timeout_queue, %struct.timeout_queue* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call %struct.lwan_connection* @timeout_queue_idx_to_node(%struct.timeout_queue* %14, i32 %18)
  store %struct.lwan_connection* %19, %struct.lwan_connection** %5, align 8
  %20 = load %struct.timeout_queue*, %struct.timeout_queue** %3, align 8
  %21 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %22 = call i32 @timeout_queue_node_to_idx(%struct.timeout_queue* %20, %struct.lwan_connection* %21)
  %23 = load %struct.lwan_connection*, %struct.lwan_connection** %5, align 8
  %24 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  %25 = load %struct.timeout_queue*, %struct.timeout_queue** %3, align 8
  %26 = getelementptr inbounds %struct.timeout_queue, %struct.timeout_queue* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store i32 %22, i32* %27, align 4
  ret void
}

declare dso_local %struct.lwan_connection* @timeout_queue_idx_to_node(%struct.timeout_queue*, i32) #1

declare dso_local i32 @timeout_queue_node_to_idx(%struct.timeout_queue*, %struct.lwan_connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
